add DriverLoader настройки драйвера вынесены в проперти

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -3,4 +3,4 @@
 chrome_executable_path = src/main/resources/chromedriver
 firefox_executable_path = src/main/resources/geckodriver.exe
 
-default_timeout = 30
+#default_timeout = 30
