добавил цикл который будет проходить по страницам, так же изменил логику в методах отвечающих за заполнение массива с данными

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,6 +1,6 @@
 #driver = chrome
 
 chrome_executable_path = src/main/resources/chromedriver
-firefox_executable_path = src/main/resources/geckodriver.exe
+firefox_executable_path = src/main/resources/geckodriver
 
 #default_timeout = 30
